--- a/portfolio.css
+++ b/portfolio.css
@@ -4,6 +4,7 @@
   padding: 0;
 }
 h1{
+  color: #00FFFF;
   margin-bottom: 60px;
   font-size: 40px;
   text-align: center;
@@ -15,7 +16,6 @@ p{
 /*ヘッダー*/
 header{
   width: 100%;
-  height: 100vh;
 }
 header div{
   height: 70px;
@@ -58,125 +58,48 @@ header img.SPmainvew{
 }
 /*メイン*/
 main{
-  padding: 200px 0 100px;
+  padding: 60px 0 100px;
   background-color: #0D1B2A;
 }
 main div.main_section{
   margin: 0 auto;
-  margin-bottom: 160px;
+  margin-bottom: 30px;
   padding-top: 60px;
   padding-bottom: 60px;
   max-width: 1100px;
   border-radius: 50px;
   background-color: #415A77;
 }
-main div.main_section h1.main_title{
-  color: #00FFFF;
-}
-/*プロフィールセクション*/
-main div.main_section div.Purofiru_content{
-  padding: 0 200px;
+
+/*スマートフォンポートフォリオ*/
+main div.Sp_portfolio{
+  width: 100%;
   display: flex;
   justify-content: center;
 }
-main div.main_section div.Purofiru_content > img{
-  width: 200px;
-  height: 200px;
-}
-main div.main_section div dt,main div.main_section div dd{
-  font-size: 18px;
-  color: #ffffff;
-}
-main div.main_section div dl{
-  margin-left: 40px;
-  display: flex;
-  flex-wrap: wrap;
-}
-main div.main_section div dt{
-  margin-bottom: 10px;
-  font-weight: bold;
+main div.Sp_portfolio > img{
   width: 30%;
 }
-main div.main_section div dd{
-  margin-bottom: 10px;
-  width: 70%;
-}
-main div.main_section div dd a{
-  text-decoration: none;
-  color: #ffffff;
-}
-/*スキルセクション*/
-main div.skill_content{
-  padding: 0 100px;
-  display: grid;
-  grid-template-columns: 300px 300px 300px;
-  grid-template-rows: 200px;
-  gap: 30px;
-
-}
-main div.main_section div.Skill_block{
-  text-align: center;
-}
-main div.main_section img.Skill_icon{
-  width: 80px;
-  height: auto;
-  margin-bottom: 50px;
-}
-main div.main_section h2{
-  font-size: 18px;
-  font-weight: bold;
-  color: #ffffff;
-  text-align: center;
-}
-/*ポートフォリオセクション*/
-main div.Portfolio_content{
-  text-align: center;
-}
-main div.portfolio_img{
-  margin-bottom: 60px;
-  padding:0 40px;
-}
-main div.portfolio_img img{
-  width: 200px;
-  padding:0 40px;
-}
-/*お問い合わせセクション*/
-main div.Contact_section{
-  margin: 0 auto;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  max-width: 1100px;
-  border-radius: 50px;
+main div.Sp_carousel{
+  width: 500px;
+  height: 480px;
   background-color: #00FFFF;
-  opacity: 0.8;
+  opacity: 0.3;
 }
-main div.Contakut_section > h1{
-  color: #415A77;
-}
-main div.contact_text{
-  padding: 0 200px;
+/*PC用ポートフォリオ*/
+main div.Pc_portfolio{
+  width: 100%;
   text-align: center;
 }
-main div.contact_block{
-  margin-bottom: 40px;
-  display: flex;
-  align-items: center;
+main div.Pc_portfolio > img{
+  width: 60%;
 }
-main div.contact_block label{
-  display: block;
-  width: 30%;
-  font-size: 18px;
-  font-weight: bold;
-}
-main div.contact_block input, main div.contact_block textarea{
-  width: 70%;
-  height: 40px;
-  border: none;
-  outline: none;
-  border-bottom:3px solid #415A77;
-}
-main div.contact_block textarea{
-  height: 120px;
+main div.Pc_portfolio div.Pc_carousel{
+  margin: 0 auto;
+  width: 500px;
+  height: 480px;
+  background-color: #00FFFF;
+  opacity: 0.3;
 }
 /*フッター*/
 footer{
