--- a/portfolio.css
+++ b/portfolio.css
@@ -9,6 +9,11 @@ h1{
   font-size: 40px;
   text-align: center;
 }
+h2{
+  color: #00FFFF;
+  font-size: 40px;
+  margin-bottom: 60px;
+}
 p{
   font-size: 18px;
 }
@@ -76,16 +81,36 @@ main div.Sp_portfolio{
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
-main div.Sp_portfolio > img{
-  width: 30%;
+main div.Sp_carousel_nav{
+  width: 40%;
+  position: relative;
+}
+main div.Sp_carousel_nav div.Sp_veiw{
+  width: 250px;
+  height: 300px;
+  position: absolute;
+  top: 190px;
+  left: 50px;
+
+  z-index: 2;
+}
+main div.Sp_carousel_nav  img.Sp_carousel_menu{
+  width: 70%;
 }
 main div.Sp_carousel{
   width: 500px;
-  height: 480px;
-  background-color: #00FFFF;
-  opacity: 0.3;
+  height: 100%;
+  background-color: rgb(0, 255, 255, 0.3);
+  text-align: center;
 }
+main img.Sp_carousel_size{
+  width: 80%;
+  height: 100%;
+  object-fit: cover;
+}
+
 /*PC用ポートフォリオ*/
 main div.Pc_portfolio{
   width: 100%;
@@ -96,10 +121,10 @@ main div.Pc_portfolio > img{
 }
 main div.Pc_portfolio div.Pc_carousel{
   margin: 0 auto;
-  width: 500px;
+  max-width: 800px;
   height: 480px;
-  background-color: #00FFFF;
-  opacity: 0.3;
+  background-color: rgb(0, 255, 255, 0.3);
+  text-align: center;
 }
 /*フッター*/
 footer{
@@ -107,6 +132,9 @@ footer{
   height: 200px;
   background-color: #415A77;
   border-top: 10px solid #00FFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 footer div.footer_section{
   display: flex;
@@ -128,6 +156,7 @@ footer div.footer_section > img{
   height: 30px;
   margin-left: 10px;
 }
+
 
 /*レスポンシブデザイン(スマホ)*/
 @media screen and (max-width:376px) {
