--- a/portfolio.css
+++ b/portfolio.css
@@ -10,8 +10,8 @@ h1{
   text-align: center;
 }
 h2{
-  color: #00FFFF;
-  font-size: 40px;
+  color: #0D1B2A;
+  font-size: 36px;
   margin-bottom: 60px;
 }
 p{
@@ -24,14 +24,13 @@ header{
 }
 header div{
   height: 70px;
-  line-height: 70px;
-  padding: 0 100px;
+  padding: 0 7%;
   background-color: #415A77;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-header div img{
+header div a img{
   max-height: 50px;
 }
 header div nav ul{
@@ -71,7 +70,7 @@ main div.main_section{
   margin-bottom: 30px;
   padding-top: 60px;
   padding-bottom: 60px;
-  max-width: 1100px;
+  width: min(calc(1000 / 1100 * 100%), 1000px);
   border-radius: 50px;
   background-color: #415A77;
 }
@@ -84,24 +83,26 @@ main div.Sp_portfolio{
   align-items: center;
 }
 main div.Sp_carousel_nav{
-  width: 40%;
+  width: 30%;
   position: relative;
 }
 main div.Sp_carousel_nav div.Sp_veiw{
-  width: 250px;
-  height: 300px;
+  width: 100%;
+  height: 30%;
   position: absolute;
-  top: 190px;
-  left: 50px;
-
+  top: 50%;
+  left: 50%;
+  transform: translate(-40%, -50%);
   z-index: 2;
 }
 main div.Sp_carousel_nav  img.Sp_carousel_menu{
-  width: 70%;
+  width: 100%;
+  height: 100%;
 }
 main div.Sp_carousel{
-  width: 500px;
+  width: 50%;
   height: 100%;
+  margin-left: 4%;
   background-color: rgb(0, 255, 255, 0.3);
   text-align: center;
 }
@@ -110,14 +111,49 @@ main img.Sp_carousel_size{
   height: 100%;
   object-fit: cover;
 }
+main div.slick-track{
+  display: flex;
+  align-items: center;
+}
 
 /*PC用ポートフォリオ*/
 main div.Pc_portfolio{
   width: 100%;
   text-align: center;
 }
-main div.Pc_portfolio > img{
-  width: 60%;
+main div.Pc_portfolio div.Pc_carousel_nav{
+  width: 100%;
+  position: relative;
+}
+main div.Pc_portfolio div.Pc_veiw{
+  width: 100%;
+  height: auto;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 2;
+}
+main div.Pc_portfolio div.Pc_veiw img.Pc_main_size{
+width: 40%;
+height: auto;
+padding-top: 3px;
+}
+main div.Pc_portfolio div.Pc_monitor{
+  position: relative;
+}
+main div.Pc_portfolio img.Pc_carousel_menu2{
+  width: 70%;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%,0);
+  z-index: 4;
+}
+main div.Pc_portfolio img.Pc_carousel_menu{
+  width: 70%;
+  margin-bottom: 60px;
+
 }
 main div.Pc_portfolio div.Pc_carousel{
   margin: 0 auto;
@@ -126,6 +162,26 @@ main div.Pc_portfolio div.Pc_carousel{
   background-color: rgb(0, 255, 255, 0.3);
   text-align: center;
 }
+main ul.Pc_menu{
+  width: 100%;
+  height: 180px;
+  padding-left: 3%;
+  display: flex;
+}
+main ul.Pc_menu li{
+  margin-right: 3%;
+  width: 15%;
+  height: 100%;
+  list-style: none;
+}
+main ul.Pc_menu li img.current{
+  border: 3px solid #0D1B2A;
+}
+main ul.Pc_menu li img.Pc_carousel_size{
+  width: 100%;
+}
+
+
 /*フッター*/
 footer{
   width: 100%;
@@ -151,18 +207,98 @@ footer div.footer_section ul li a{
   text-decoration: none;
   color: #ffffff;
 }
-footer div.footer_section > img{
+footer div.footer_section a img{
   width: 30px;
   height: 30px;
   margin-left: 10px;
 }
 
-
+/*レスポンシブデザイン(タブレット)*/
+@media screen and (max-width:951px) {
+  /*共通パーツ*/
+  h1{
+    font-size: 32px;
+  }
+  h2{
+    font-size: 32px;
+    margin-bottom: 30px;
+  }
+  p{
+    font-size: 16px;
+  }
+  /*ヘッダー*/
+  header{
+  width: 100%;
+}
+  header div{
+  height: 40px;
+  padding: 0 30px;
+  align-items: center;
+}
+  header div a img{
+  max-height: 30px;
+}
+  /*ハンバーガーメニュー*/
+  header div nav.nav_sp{
+    display: block;
+    height: 30px;
+    line-height: 40px;
+  }
+  header div nav.nav_sp img.menu_btn_open{
+    max-width: 30px;
+    opacity: 1;
+  }
+  header div nav.nav_sp img.menu_btn_close{
+    max-width: 30px;
+    opacity: 0;
+    }
+  header div nav.nav_pc{
+    display: none;
+  }
+  /*メイン*/
+  main{
+  padding: 60px 0 60px;
+}
+  main div.main_section{
+  margin-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+  /*ポートフォリオ（PC）*/
+  main div.Pc_portfolio div.Pc_carousel{
+  margin: 0 auto;
+  padding-bottom: 4%;
+  max-width: 800px;
+  height: auto;
+  background-color: rgb(0, 255, 255, 0.3);
+  text-align: center;
+}
+main ul.Pc_menu{
+  margin-bottom: 5%;
+  padding-left: 3%;
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+main ul.Pc_menu li{
+  margin-right: 3%;
+  width: 15%;
+  height: 100%;
+  list-style: none;
+}
+}
 /*レスポンシブデザイン(スマホ)*/
 @media screen and (max-width:376px) {
   /*共通パーツ*/
   h1{
     font-size: 32px;
+  }
+    h2{
+    font-size: 24px;
+    margin-bottom: 16px;
+  }
+  p{
+    font-size: 16px;
   }
   /*ヘッダー*/
   header{
@@ -173,9 +309,8 @@ footer div.footer_section > img{
   height: 40px;
   padding: 0 30px;
   align-items: center;
-  line-height: 40px;
 }
-  header div img{
+  header div a img{
   max-height: 30px;
 }
   /*ハンバーガーメニュー*/
@@ -185,10 +320,12 @@ footer div.footer_section > img{
     line-height: 40px;
   }
   header div nav.nav_sp img.menu_btn_open{
+    max-width: 30px;
     opacity: 1;
   }
     header div nav.nav_sp img.menu_btn_close{
-    opacity: 0;
+      max-width: 30px;
+      opacity: 0;
     }
   header div nav.nav_pc{
     display: none;
@@ -200,5 +337,36 @@ footer div.footer_section > img{
   header img.SPmainvew{
     width: 100%;
     display: block;
-  } 
+  }
+  /*メイン*/
+  main{
+  padding: 30px 0 30px;
+}
+  main div.main_section{
+  margin-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+  /*ポートフォリオ（PC）*/
+  main div.Pc_portfolio div.Pc_carousel{
+  margin: 0 auto;
+  padding-bottom: 4%;
+  max-width: 800px;
+  height: auto;
+  background-color: rgb(0, 255, 255, 0.3);
+  text-align: center;
+}
+main ul.Pc_menu{
+  margin-bottom: 5%;
+  padding-left: 3%;
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+main ul.Pc_menu li{
+  margin-right: 3%;
+  width: 15%;
+  height: 100%;
+  list-style: none;
+}
 }
