--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ p{
 /*ヘッダー*/
 header{
   width: 100%;
-  height: 100vh;
+  line-height: 0;
+  background-color: #0D1B2A;
 }
 header div{
   height: 70px;
-  line-height: 70px;
-  padding: 0 100px;
+  padding: 0 7%;
   background-color: #415A77;
   display: flex;
   justify-content: space-between;
@@ -49,9 +49,9 @@ header nav.nav_sp{
 }
 /*メインビュー*/
 header img.PCmainvew{
-    object-fit: cover;
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 header img.SPmainvew{
   display: none;
@@ -66,7 +66,7 @@ main div.main_section{
   margin-bottom: 160px;
   padding-top: 60px;
   padding-bottom: 60px;
-  max-width: 1100px;
+  width: min(calc(1000 / 1100 * 100%), 1000px);
   border-radius: 50px;
   background-color: #415A77;
 }
@@ -74,21 +74,21 @@ main div.main_section h1.main_title{
   color: #00FFFF;
 }
 /*プロフィールセクション*/
-main div.main_section div.Purofiru_content{
-  padding: 0 200px;
+main div.main_section div.Profile_content{
+  padding: 0 16%;
   display: flex;
   justify-content: center;
 }
-main div.main_section div.Purofiru_content > img{
+main div.main_section div.Profile_content > img{
   width: 200px;
-  height: 200px;
+  height: 30%;
 }
 main div.main_section div dt,main div.main_section div dd{
   font-size: 18px;
   color: #ffffff;
 }
 main div.main_section div dl{
-  margin-left: 40px;
+  margin-left: 6%;
   display: flex;
   flex-wrap: wrap;
 }
@@ -107,18 +107,18 @@ main div.main_section div dd a{
 }
 /*スキルセクション*/
 main div.skill_content{
-  padding: 0 100px;
+  padding: 0 16%;
   display: grid;
-  grid-template-columns: 300px 300px 300px;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 200px;
-  gap: 30px;
+  gap: 3px;
 
 }
 main div.main_section div.Skill_block{
   text-align: center;
 }
 main div.main_section img.Skill_icon{
-  width: 80px;
+  width: 30%;
   height: auto;
   margin-bottom: 50px;
 }
@@ -133,19 +133,23 @@ main div.Portfolio_content{
   text-align: center;
 }
 main div.portfolio_img{
-  margin-bottom: 60px;
-  padding:0 40px;
+  padding: 0 16%;
 }
 main div.portfolio_img img{
-  width: 200px;
-  padding:0 40px;
+  width: 28%;
+  padding:0 2%;
+  margin-bottom: 8%;
+}
+main div.Portfolio_content a img{
+  width: 30%;
+  height: auto;
 }
 /*お問い合わせセクション*/
 main div.Contact_section{
   margin: 0 auto;
   padding-top: 60px;
   padding-bottom: 60px;
-  max-width: 1100px;
+  width: min(calc(1000 / 1100 * 100%), 1000px);
   border-radius: 50px;
   background-color: rgb(0, 255, 255, 0.8);
 }
@@ -153,7 +157,7 @@ main div.Contakut_section > h1{
   color: #415A77;
 }
 main div.contact_text{
-  padding: 0 200px;
+  padding: 0 16%;
   text-align: center;
 }
 main div.contact_block{
@@ -177,6 +181,7 @@ main div.contact_block input, main div.contact_block textarea{
 main div.contact_block textarea{
   height: 120px;
 }
+
 /*フッター*/
 footer{
   width: 100%;
@@ -202,10 +207,128 @@ footer div.footer_section ul li a{
   text-decoration: none;
   color: #ffffff;
 }
-footer div.footer_section > img{
+footer div.footer_section a img{
   width: 30px;
   height: 30px;
   margin-left: 10px;
+}
+
+/*レスポンシブデザイン(タブレット)*/
+@media screen and (max-width:951px) {
+/*共通パーツ*/
+  h1{
+    margin-bottom: 40px;
+    font-size: 32px;
+  }
+  dt , dd{
+    font-size: 16px;
+  }
+  /*ヘッダー*/
+  header{
+  width: 100%;
+  height: auto;
+}
+  header div{
+  height: 40px;
+  padding: 0 30px;
+  align-items: center;
+}
+  header div a img{
+  max-height: 30px;
+}
+/*ハンバーガーメニュー*/
+header div nav.nav_sp{
+  display: block;
+  height: 30px;
+  line-height: 40px;
+}
+header div nav.nav_sp img.menu_btn_open{
+  max-width: 30px;
+  opacity: 1;
+}
+  header div nav.nav_sp img.menu_btn_close{
+  max-width: 30px;
+  opacity: 0;
+  }
+header div nav.nav_pc{
+  display: none;
+}
+
+/*メイン*/
+main{
+  padding: 60px 0 60px;
+}
+main div.main_section{
+  margin-bottom: 60px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+/*プロフィールセクション*/
+main div.main_section div.Profile_content{
+  padding: 0 8%;
+}
+/*お問い合わせセクション*/
+main div.contact_text{
+  padding: 0 8%;
+  text-align: none;
+}
+main div.contact_text{
+  padding: 0 16%;
+  text-align: center;
+}
+main div.contact_block{
+  margin-bottom: 40px;
+  display: flex;
+  flex-wrap: wrap;
+}
+main div.contact_block label{
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  font-weight: bold;
+}
+main div.contact_block input, main div.contact_block textarea{
+  width: 100%;
+  height: 40px;
+  border: none;
+  outline: none;
+  border-bottom:3px solid #415A77;
+}
+main div.contact_block textarea{
+  width: 100%;
+  height: 120px;
+}
+main div.contact_text{
+    padding: 0 8%;
+    text-align: none;
+}
+main div.contact_text{
+  padding: 0 16%;
+  text-align: center;
+}
+main div.contact_block{
+  margin-bottom: 40px;
+  display: flex;
+  flex-wrap: wrap;
+}
+main div.contact_block label{
+  margin-bottom: 16px;
+  width: 100%;
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+}
+main div.contact_block input, main div.contact_block textarea{
+  width: 100%;
+  height: 40px;
+  border: none;
+  outline: none;
+  border-bottom:3px solid #415A77;
+}
+main div.contact_block textarea{
+  width: 100%;
+  height: 120px;
+}
 }
 
 /*レスポンシブデザイン(スマホ)*/
@@ -214,18 +337,21 @@ footer div.footer_section > img{
   h1{
     font-size: 32px;
   }
+  p{
+    font-size: 16px;
+  }
   /*ヘッダー*/
   header{
   width: 100%;
-  height: 40px;
 }
   header div{
   height: 40px;
   padding: 0 30px;
   align-items: center;
-  line-height: 40px;
+  display: flex;
+  align-items: center;
 }
-  header div img{
+  header div a img{
   max-height: 30px;
 }
   /*ハンバーガーメニュー*/
@@ -235,9 +361,11 @@ footer div.footer_section > img{
     line-height: 40px;
   }
   header div nav.nav_sp img.menu_btn_open{
+    max-width: 30px;
     opacity: 1;
   }
     header div nav.nav_sp img.menu_btn_close{
+    max-width: 30px;
     opacity: 0;
     }
   header div nav.nav_pc{
@@ -251,4 +379,85 @@ footer div.footer_section > img{
     width: 100%;
     display: block;
   } 
+  
+  /*メイン*/
+  main{
+    padding: 30px 0 30px;
+}
+  main div.main_section{
+  margin-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+/*プロフィールセクション*/
+  main div.main_section div.Profile_content{
+  padding: 0 8%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+main div.main_section div.Profile_content > img{
+  width: 150px;
+  height: 30%;
+  margin-bottom: 30px;
+}
+main div.main_section div dt{
+  margin-bottom: 0;
+  width: 100%;
+
+}
+main div.main_section div dd{
+  margin-bottom: 16px;
+  width: 100%;
+}
+
+/*スキルセクション*/
+main div.skill_content{
+  padding: 0 8%;
+  display: block;
+}
+main div.main_section img.Skill_icon{
+  width: 30%;
+  height: auto;
+  margin-bottom: 0;
+}
+main div.main_section div.Skill_block{
+  margin-bottom: 16px;
+}
+
+/*お問い合わせ内容*/
+main div.contact_text{
+    padding: 0 8%;
+    text-align: none;
+}
+ain div.contact_text{
+  padding: 0 16%;
+  text-align: center;
+}
+main div.contact_block{
+  margin-bottom: 40px;
+  display: flex;
+  flex-wrap: wrap;
+}
+main div.contact_block label{
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  font-weight: bold;
+}
+main div.contact_block input, main div.contact_block textarea{
+  width: 100%;
+  height: 40px;
+  border: none;
+  outline: none;
+  border-bottom:3px solid #415A77;
+}
+main div.contact_block textarea{
+  width: 100%;
+  height: 120px;
+}
+main div.contact_text input.submit_img{
+  width: 50%;
+}
 }
