--- a/style.css
+++ b/style.css
@@ -1,67 +1,84 @@
 /*共通パーツ*/
-*{
+* {
   margin: 0;
   padding: 0;
 }
-h1{
+
+h1 {
   margin-bottom: 60px;
   font-size: 40px;
   text-align: center;
 }
-p{
+
+p {
   font-size: 18px;
 }
 
 /*ヘッダー*/
-header{
+header {
   width: 100%;
   line-height: 0;
   background-color: #0D1B2A;
 }
-header div{
+
+header div {
+  width: 100%;
   height: 70px;
-  padding: 0 7%;
+  position: fixed;
   background-color: #415A77;
+  border-bottom: 3px solid #00FFFF;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 6;
 }
-header div img{
+
+header div img {
   max-height: 50px;
+  margin-left: 40px;
 }
-header div nav ul{
+
+header div nav ul {
   display: flex;
 }
-header div nav ul li{
-  margin-left: 40px;
+
+header div nav ul li {
+  margin-right: 40px;
   list-style: none;
 }
-header div nav ul li a{
+
+header div nav ul li a {
   font-size: 18px;
   color: #00FFFF;
   text-decoration: none;
 }
-header div nav ul li a:hover{
+
+header div nav ul li a:hover {
   color: #ffffff;
 }
-header nav.nav_sp{
+
+header nav.nav_sp {
   display: none;
 }
+
 /*メインビュー*/
-header img.PCmainvew{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+header img.PCmainvew {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-header img.SPmainvew{
+
+header img.SPmainvew {
   display: none;
 }
+
 /*メイン*/
-main{
+main {
   padding: 200px 0 100px;
   background-color: #0D1B2A;
 }
-main div.main_section{
+
+main div.main_section {
   margin: 0 auto;
   margin-bottom: 160px;
   padding-top: 60px;
@@ -70,82 +87,103 @@ main div.main_section{
   border-radius: 50px;
   background-color: #415A77;
 }
-main div.main_section h1.main_title{
+
+main div.main_section h1.main_title {
   color: #00FFFF;
 }
+
 /*プロフィールセクション*/
-main div.main_section div.Profile_content{
+main div.main_section div.Profile_content {
   padding: 0 16%;
   display: flex;
   justify-content: center;
 }
-main div.main_section div.Profile_content > img{
+
+main div.main_section div.Profile_content>img {
   width: 200px;
   height: 30%;
 }
-main div.main_section div dt,main div.main_section div dd{
+
+main div.main_section div dt,
+main div.main_section div dd {
   font-size: 18px;
   color: #ffffff;
 }
-main div.main_section div dl{
+
+main div.main_section div dl {
   margin-left: 6%;
   display: flex;
   flex-wrap: wrap;
 }
-main div.main_section div dt{
+
+main div.main_section div dt {
   margin-bottom: 10px;
   font-weight: bold;
   width: 30%;
 }
-main div.main_section div dd{
+
+main div.main_section div dd {
   margin-bottom: 10px;
   width: 70%;
 }
-main div.main_section div dd a{
+
+main div.main_section div dd a {
   text-decoration: none;
   color: #ffffff;
 }
+
 /*スキルセクション*/
-main div.skill_content{
+main div.skill_content {
   padding: 0 16%;
+  margin-bottom: 60px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 200px;
-  gap: 3px;
-
+  gap: 8% 10%;
 }
-main div.main_section div.Skill_block{
+
+main div.main_section div.Skill_block {
   text-align: center;
 }
-main div.main_section img.Skill_icon{
+
+main div.main_section img.Skill_icon {
   width: 30%;
   height: auto;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
-main div.main_section h2{
+
+main div.main_section h2 {
   font-size: 18px;
   font-weight: bold;
   color: #ffffff;
   text-align: center;
 }
+
+main div.main_section div.Skill_block p{
+  color: #ffffff;
+}
+
 /*ポートフォリオセクション*/
-main div.Portfolio_content{
+main div.Portfolio_content {
   text-align: center;
 }
-main div.portfolio_img{
+
+main div.portfolio_img {
   padding: 0 16%;
 }
-main div.portfolio_img img{
+
+main div.portfolio_img img {
   width: 28%;
-  padding:0 2%;
+  padding: 0 2%;
   margin-bottom: 8%;
 }
-main div.Portfolio_content a img{
+
+main div.Portfolio_content a img {
   width: 30%;
   height: auto;
 }
+
 /*お問い合わせセクション*/
-main div.Contact_section{
+main div.Contact_section {
   margin: 0 auto;
   padding-top: 60px;
   padding-bottom: 60px;
@@ -153,311 +191,425 @@ main div.Contact_section{
   border-radius: 50px;
   background-color: rgb(0, 255, 255, 0.8);
 }
-main div.Contakut_section > h1{
+
+main div.Contakut_section>h1 {
   color: #415A77;
 }
-main div.contact_text{
+
+main div.contact_text {
   padding: 0 16%;
   text-align: center;
 }
-main div.contact_block{
+
+main div.contact_block {
   margin-bottom: 40px;
   display: flex;
   align-items: center;
 }
-main div.contact_block label{
+
+main div.contact_block label {
   display: block;
   width: 30%;
   font-size: 18px;
   font-weight: bold;
 }
-main div.contact_block input, main div.contact_block textarea{
+
+main div.contact_block input,
+main div.contact_block textarea {
   width: 70%;
   height: 40px;
   border: none;
   outline: none;
-  border-bottom:3px solid #415A77;
+  border-bottom: 3px solid #415A77;
 }
-main div.contact_block textarea{
+
+main div.contact_block textarea {
   height: 120px;
 }
 
 /*フッター*/
-footer{
+footer {
   width: 100%;
   height: 200px;
   background-color: #415A77;
-  border-top: 10px solid #00FFFF;
+  border-top: 3px solid #00FFFF;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-footer div.footer_section{
+
+footer div.footer_section {
   display: flex;
   justify-content: center;
 }
-footer div.footer_section ul{
+
+footer div.footer_section ul {
   display: flex;
 }
-footer div.footer_section ul li{
+
+footer div.footer_section ul li {
   margin-left: 10px;
   list-style: none;
 }
-footer div.footer_section ul li a{
+
+footer div.footer_section ul li a {
   text-decoration: none;
   color: #ffffff;
 }
-footer div.footer_section a img{
+
+footer div.footer_section a img {
   width: 30px;
   height: 30px;
   margin-left: 10px;
 }
 
-/*レスポンシブデザイン(タブレット)*/
-@media screen and (max-width:951px) {
-/*共通パーツ*/
-  h1{
-    margin-bottom: 40px;
-    font-size: 32px;
-  }
-  dt , dd{
-    font-size: 16px;
-  }
-  /*ヘッダー*/
-  header{
-  width: 100%;
-  height: auto;
-}
-  header div{
-  height: 40px;
-  padding: 0 30px;
-  align-items: center;
-}
-  header div a img{
-  max-height: 30px;
-}
-/*ハンバーガーメニュー*/
-header div nav.nav_sp{
-  display: block;
-  height: 30px;
-  line-height: 40px;
-}
-header div nav.nav_sp img.menu_btn_open{
-  max-width: 30px;
-  opacity: 1;
-}
-  header div nav.nav_sp img.menu_btn_close{
-  max-width: 30px;
-  opacity: 0;
-  }
-header div nav.nav_pc{
+div.hamburger_menu{
   display: none;
 }
 
-/*メイン*/
-main{
-  padding: 60px 0 60px;
-}
-main div.main_section{
-  margin-bottom: 60px;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-/*プロフィールセクション*/
-main div.main_section div.Profile_content{
-  padding: 0 8%;
-}
-/*お問い合わせセクション*/
-main div.contact_text{
-  padding: 0 8%;
-  text-align: none;
-}
-main div.contact_text{
-  padding: 0 16%;
-  text-align: center;
-}
-main div.contact_block{
-  margin-bottom: 40px;
-  display: flex;
-  flex-wrap: wrap;
-}
-main div.contact_block label{
-  display: block;
-  width: 100%;
-  font-size: 16px;
-  font-weight: bold;
-}
-main div.contact_block input, main div.contact_block textarea{
-  width: 100%;
-  height: 40px;
-  border: none;
-  outline: none;
-  border-bottom:3px solid #415A77;
-}
-main div.contact_block textarea{
-  width: 100%;
-  height: 120px;
-}
-main div.contact_text{
+/*レスポンシブデザイン(タブレット)*/
+@media screen and (max-width:951px) {
+
+  /*共通パーツ*/
+  h1 {
+    margin-bottom: 40px;
+    font-size: 32px;
+  }
+
+  dt,
+  dd {
+    font-size: 16px;
+  }
+
+  /*ヘッダー*/
+  header {
+    width: 100%;
+    height: auto;
+  }
+
+  header div {
+    height: 40px;
+    padding: 0 30px;
+    align-items: center;
+  }
+
+  header div a img {
+    margin-left: 0;
+    max-height: 30px;
+  }
+
+  /*ハンバーガーメニュー*/
+  header div nav.nav_sp {
+    margin-right: 8%;
+    display: block;
+    height: 30px;
+    line-height: 40px;
+    position: relative;
+  }
+
+  header div nav.nav_sp img.menu_btn_open {
+    max-width: 30px;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+  }
+
+  header div nav.nav_sp img.menu_btn_open.active {
+    opacity: 0;
+  }
+
+  header div nav.nav_sp img.menu_btn_close {
+    max-width: 30px;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+  }
+
+  header div nav.nav_sp img.menu_btn_close.active {
+    opacity: 1;
+  }
+
+  div.hamburger_menu{
+    display: block;
+    position: fixed;
+    background-color: #415A77;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    right: 100%;
+    z-index: 5;
+  }
+  div.hamburger_menu.active{
+    left: 0;
+  }
+  div.hamburger_menu ul{
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  div.hamburger_menu ul li{
+    list-style: none;
+    margin-bottom: 14px;
+  }
+  div.hamburger_menu ul li a{
+    color: #ffffff;
+    text-decoration: none;
+  }
+    
+  header div nav.nav_pc {
+    display: none;
+  }
+
+  /*メイン*/
+  main {
+    padding: 60px 0 60px;
+  }
+
+  main div.main_section {
+    margin-bottom: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  /*プロフィールセクション*/
+  main div.main_section div.Profile_content {
+    padding: 0 8%;
+  }
+
+  /*お問い合わせセクション*/
+  main div.contact_text {
     padding: 0 8%;
     text-align: none;
-}
-main div.contact_text{
-  padding: 0 16%;
-  text-align: center;
-}
-main div.contact_block{
-  margin-bottom: 40px;
-  display: flex;
-  flex-wrap: wrap;
-}
-main div.contact_block label{
-  margin-bottom: 16px;
-  width: 100%;
-  display: block;
-  font-size: 16px;
-  font-weight: bold;
-}
-main div.contact_block input, main div.contact_block textarea{
-  width: 100%;
-  height: 40px;
-  border: none;
-  outline: none;
-  border-bottom:3px solid #415A77;
-}
-main div.contact_block textarea{
-  width: 100%;
-  height: 120px;
-}
+  }
+
+  main div.contact_text {
+    padding: 0 16%;
+    text-align: center;
+  }
+
+  main div.contact_block {
+    margin-bottom: 40px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  main div.contact_block label {
+    display: block;
+    width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  main div.contact_block input,
+  main div.contact_block textarea {
+    width: 100%;
+    height: 40px;
+    border: none;
+    outline: none;
+    border-bottom: 3px solid #415A77;
+  }
+
+  main div.contact_block textarea {
+    width: 100%;
+    height: 120px;
+  }
+
+  main div.contact_text {
+    padding: 0 8%;
+    text-align: none;
+  }
+
+  main div.contact_text {
+    padding: 0 16%;
+    text-align: center;
+  }
+
+  main div.contact_block {
+    margin-bottom: 40px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  main div.contact_block label {
+    margin-bottom: 16px;
+    width: 100%;
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  main div.contact_block input,
+  main div.contact_block textarea {
+    width: 100%;
+    height: 40px;
+    border: none;
+    outline: none;
+    border-bottom: 3px solid #415A77;
+  }
+
+  main div.contact_block textarea {
+    width: 100%;
+    height: 120px;
+  }
 }
 
 /*レスポンシブデザイン(スマホ)*/
-@media screen and (max-width:376px) {
+@media screen and (max-width:501px) {
+
   /*共通パーツ*/
-  h1{
+  h1 {
     font-size: 32px;
   }
-  p{
+
+  p {
     font-size: 16px;
   }
+
   /*ヘッダー*/
-  header{
-  width: 100%;
-}
-  header div{
-  height: 40px;
-  padding: 0 30px;
-  align-items: center;
-  display: flex;
-  align-items: center;
-}
-  header div a img{
-  max-height: 30px;
-}
+  header {
+    width: 100%;
+  }
+
+  header div {
+    height: 40px;
+    padding: 0 30px;
+    align-items: center;
+    display: flex;
+    align-items: center;
+  }
+
+  header div a img {
+    max-height: 30px;
+  }
+
   /*ハンバーガーメニュー*/
-  header div nav.nav_sp{
+  header div nav.nav_sp {
     display: block;
     height: 30px;
     line-height: 40px;
   }
-  header div nav.nav_sp img.menu_btn_open{
+
+  header div nav.nav_sp img.menu_btn_open {
     max-width: 30px;
     opacity: 1;
   }
-    header div nav.nav_sp img.menu_btn_close{
+
+  header div nav.nav_sp img.menu_btn_close {
     max-width: 30px;
     opacity: 0;
-    }
-  header div nav.nav_pc{
+  }
+
+  header div nav.nav_pc {
     display: none;
   }
+
   /*メインビュー*/
   header img.PCmainvew {
     display: none;
   }
-  header img.SPmainvew{
+
+  header img.SPmainvew {
     width: 100%;
     display: block;
-  } 
-  
+  }
+
   /*メイン*/
-  main{
+  main {
     padding: 30px 0 30px;
-}
-  main div.main_section{
-  margin-bottom: 30px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
+  }
 
-/*プロフィールセクション*/
-  main div.main_section div.Profile_content{
-  padding: 0 8%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-main div.main_section div.Profile_content > img{
-  width: 150px;
-  height: 30%;
-  margin-bottom: 30px;
-}
-main div.main_section div dt{
-  margin-bottom: 0;
-  width: 100%;
+  main div.main_section {
+    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 
-}
-main div.main_section div dd{
-  margin-bottom: 16px;
-  width: 100%;
-}
+  /*プロフィールセクション*/
+  main div.main_section div.Profile_content {
+    padding: 0 8%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 
-/*スキルセクション*/
-main div.skill_content{
-  padding: 0 8%;
-  display: block;
-}
-main div.main_section img.Skill_icon{
-  width: 30%;
-  height: auto;
-  margin-bottom: 0;
-}
-main div.main_section div.Skill_block{
-  margin-bottom: 16px;
-}
+  main div.main_section div.Profile_content>img {
+    width: 150px;
+    height: 30%;
+    margin-bottom: 30px;
+  }
 
-/*お問い合わせ内容*/
-main div.contact_text{
+  main div.main_section div dt {
+    margin-bottom: 0;
+    width: 100%;
+
+  }
+
+  main div.main_section div dd {
+    margin-bottom: 16px;
+    width: 100%;
+  }
+
+  /*スキルセクション*/
+  main div.skill_content {
+    padding: 0 8%;
+    display: block;
+  }
+
+  main div.main_section img.Skill_icon {
+    width: 30%;
+    height: auto;
+    margin-bottom: 0;
+  }
+
+  main div.main_section div.Skill_block {
+    margin-bottom: 16px;
+  }
+
+  /*お問い合わせ内容*/
+  main div.contact_text {
     padding: 0 8%;
     text-align: none;
-}
-ain div.contact_text{
-  padding: 0 16%;
-  text-align: center;
-}
-main div.contact_block{
-  margin-bottom: 40px;
-  display: flex;
-  flex-wrap: wrap;
-}
-main div.contact_block label{
-  display: block;
-  width: 100%;
-  font-size: 16px;
-  font-weight: bold;
-}
-main div.contact_block input, main div.contact_block textarea{
-  width: 100%;
-  height: 40px;
-  border: none;
-  outline: none;
-  border-bottom:3px solid #415A77;
-}
-main div.contact_block textarea{
-  width: 100%;
-  height: 120px;
-}
-main div.contact_text input.submit_img{
-  width: 50%;
-}
+  }
+
+  ain div.contact_text {
+    padding: 0 16%;
+    text-align: center;
+  }
+
+  main div.contact_block {
+    margin-bottom: 40px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  main div.contact_block label {
+    display: block;
+    width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  main div.contact_block input,
+  main div.contact_block textarea {
+    width: 100%;
+    height: 40px;
+    border: none;
+    outline: none;
+    border-bottom: 3px solid #415A77;
+  }
+
+  main div.contact_block textarea {
+    width: 100%;
+    height: 120px;
+  }
+
+  main div.contact_text input.submit_img {
+    width: 50%;
+  }
 }
