--- a/portfolio.css
+++ b/portfolio.css
@@ -3,7 +3,9 @@
   margin: 0;
   padding: 0;
 }
-
+body{
+  height: 100svh;
+}
 h1 {
   color: #00FFFF;
   margin-bottom: 60px;
@@ -330,7 +332,7 @@ footer div.footer_section a img {
     position: fixed;
     background-color: #415A77;
     width: 100%;
-    height: 100vh;
+    height: 100svh;
     top: 0;
     right: 100%;
     transition: all 1s 0s ease;
