--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+body{
+  height: 100svh;
+}
+
 h1 {
   margin-bottom: 60px;
   font-size: 40px;
@@ -338,7 +342,7 @@ div.hamburger_menu{
     position: fixed;
     background-color: #415A77;
     width: 100%;
-    height: 100vh;
+    height: 100svh;
     top: 0;
     right: 100%;
     z-index: 5;
